Change license to CC BY 4.0, add citation file, remove data files from repository

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,12 @@ Desktop.ini
 
 # Project specific
 # Add custom exclusions here 
+
+# Exclude data files
+/data/
+*.xlsx
+*.csv
+*.xls
+
+# Temporary files
+*.tmp 
